# remote-attestation

./: README.md
examples/veraison/: README.md
examples/veraison/provisioning/: README.md  run.sh
examples/veraison/realm-application/: Cargo.toml
lib/ratls/: .gitignore  README.md
lib/ratls/client/: Cargo.toml  README.md
lib/ratls/client/src/: main.rs
lib/ratls/ratls/: Cargo.toml  README.md
lib/ratls/ratls/src/: cert_resolver.rs  cert_verifier.rs  client.rs  config.rs  connection.rs  error.rs  lib.rs  server.rs  token_resolver.rs  token_verifier.rs  tools.rs
lib/ratls/rust-ear/: Cargo.toml
lib/ratls/rust-ear/src/: ear.rs
lib/ratls/server/: Cargo.toml  README.md
lib/ratls/server/cert/: root-ca.csr  root-ca.key  root-ca.srl
lib/ratls/server/src/: main.rs
lib/ratls/veraison-verifier/: Cargo.toml
lib/ratls/veraison-verifier/src/: error.rs  lib.rs  structs.rs  verifier.rs
lib/realm-verifier/: Cargo.toml  README.md
lib/realm-verifier/src/: hash.rs  lib.rs  parser.rs
lib/realm-verifier/src/parser/: json.rs
lib/realm-verifier/tests/: realm.json
lib/rust-rsi/: .gitignore  Cargo.toml  README.md
lib/rust-rsi/src/: lib.rs
lib/rust-rsi/src/ioctl/: kernel.rs  mod.rs
lib/rust-rsi/src/token/: crypto.rs  dumper.rs  mod.rs  parser.rs  verifier.rs
tools/rocli/: Cargo.toml  README.md
tools/rocli/src/: conv.rs  error.rs  main.rs  subcmds.rs  tags.rs  tools.rs
tools/rsictl/: Cargo.toml  README.md
tools/rsictl/.cargo/: config.toml
tools/rsictl/src/: main.rs  subcmds.rs  tools.rs
