[package]
name = "realm-verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "*", features = ["derive"]}
chrono = "*"
env_logger ="*"
hex = "*"
log = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "*"
tinyvec = "*"
rust-rsi = { path = "../rust-rsi" }
ratls = { path = "../ratls/ratls" }
veraison-verifier = { path = "../ratls/veraison-verifier" }
