[package]
name = "realm-verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "*"
log = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "*"
tinyvec = "*"
rust-rsi = { path = "../rust-rsi" }
ratls = { path = "../ratls/ratls" }
