[package]
name = "rsictl"
version = "0.1.0"
edition = "2021"
authors = [ "Lukasz Pawelczyk" ]
description = "Command line interface for the RSI kernel module"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
rust-rsi = { path = "../../lib/rust-rsi" }
rand = "*"

[profile.release]
strip = true
