[package]
name = "ratls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "*", features = ["alloc"] }
bcder = ">=0.7.3"
env_logger = "*"
lazy_static = "*"
log = "*"
pkcs8 = { version = "*", features = ["alloc"] }
rand = "*"
rcgen = "*"
rsa = { version = "*", features = ["nightly", "pkcs5"] }
rustls = { version = "^0.23", default-features = false, features = ["std", "logging", "tls12", "ring"] }
rustls-pemfile = "*"
sha2 = "*"
simple_asn1 = "*"
x509-certificate = "*"
rust-rsi = { path = "../../rust-rsi" }
rustls-webpki = "*"
