[package]
name = "veraison-verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
ratls = { path = "../ratls" }
reqwest = { version = "*", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "*", features = ["derive", "alloc"] }
serde_json = { version = "*", features = ["alloc"] }
ear = "0.3.0"
rust-rsi = { path = "../../rust-rsi" }
base64 = { version = "*", features = ["alloc"] }
